Makes the blazor app launchable through electron

--- a/src/Agima.Client/Properties/launchSettings.json
+++ b/src/Agima.Client/Properties/launchSettings.json
@@ -8,6 +8,13 @@
     }
   },
   "profiles": {
+    "Electron.NET App": {
+      "commandName": "Executable",
+      "executablePath": "dotnet",
+      "commandLineArgs": "electronize start",
+      "workingDirectory": "$(ProjectDir)"
+    },
+
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
